--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!--
-Google IO 2012/2013 HTML5 Slide Template
-
-Authors: Eric Bidelman <ebidel@gmail.com>
-         Luke Mahé <lukem@google.com>
-
-URL: https://code.google.com/p/io-2012-slides
--->
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
   <title></title>
@@ -18,6 +10,7 @@ URL: https://code.google.com/p/io-2012-slides
   <!--<meta name="viewport" content="initial-scale=0.4">-->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" media="all" href="theme/css/default.css">
+  <link rel="stylesheet" media="all" href="theme/css/rcu.css">
   <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="theme/css/phone.css">
   <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->
   <script data-main="js/slides" src="js/require-1.0.8.min.js"></script>
@@ -26,7 +19,7 @@ URL: https://code.google.com/p/io-2012-slides
 
 <slides class="layout-widescreen">
 
-  <slide class="logoslide nobackground">
+  <slide class="nobackground">
     <article class="flexbox vcenter">
       <span><img src="images/google_developers_logo.png"></span>
     </article>
@@ -40,6 +33,97 @@ URL: https://code.google.com/p/io-2012-slides
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
     </hgroup>
+  </slide>
+
+  <slide class="segue dark nobackground">
+    <aside class="gdbar"><img src="images/google_developers_icon_128.png"></aside>
+    <hgroup class="auto-fadein">
+      <h2>The past</h2>
+      <h3>or “how many pages is it?”</h3>
+    </hgroup>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Don't discuss pages, discuss modules</h2>
+    </hgroup>
+    <article class="flexbox vcenter">
+      <img src="images/modular_1.png" alt="">
+    </article>
+  </slide>
+
+  <slide class="fill nobackground" style="background-image: url(images/nuts-01.jpg); background-size: 100% auto">
+  </slide>
+
+  <slide class="fill nobackground" style="background-image: url(images/nuts-01-s.jpg); background-size: 100% auto">
+  </slide>
+
+  <slide class="fill nobackground" style="background-image: url(images/nuts-02.jpg); background-size: 100% auto">
+  </slide>
+
+  <slide class="fill nobackground" style="background-image: url(images/nuts-02-s.jpg); background-size: 100% auto">
+  </slide>
+
+  <slide class="segue dark nobackground">
+    <aside class="gdbar"><img src="images/google_developers_icon_128.png"></aside>
+    <hgroup class="auto-fadein">
+      <h2>Related subjects</h2>
+      <h3>but not for today</h3>
+    </hgroup>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Web Components</h2>
+    </hgroup>
+    <article class="flexbox vcenter">
+      <img src="images/web-components-logo.svg" alt="" style='width: 20em'>
+      <ul class='lower-links'>
+        <li>
+          <a href='http://webcomponents.org/'>http://webcomponents.org/</a>
+        </li>
+        <li>
+          <a href='https://www.youtube.com/watch?v=fqULJBBEVQE'>https://www.youtube.com/watch?v=fqULJBBEVQE</a>
+        </li>
+      </ul>
+    </article>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Bower</h2>
+    </hgroup>
+    <article class="flexbox vcenter" style='margin-top: 0'>
+      <img src="images/bower-logo.png" alt="" style='width: auto; height: 16em'>
+      <ul class='lower-links'>
+        <li>
+          <a href='http://bower.io/'>http://bower.io/</a>
+        </li>
+        <li>
+          <a href='http://www.youtube.com/watch?v=1rz334A8U7o'>https://www.youtube.com/watch?v=1rz334A8U7o</a>
+        </li>
+      </ul>
+    </article>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>JS Frameworks and patterns</h2>
+    </hgroup>
+    <article class="" style='margin-top: .25em'>
+      <img src="images/js.jpg" alt="" style='width: 38em'>
+      <ul class='lower-links'>
+        <li>
+          <a href='http://emberjs.com/'>http://emberjs.com/</a>
+        </li>
+        <li>
+          <a href='https://angularjs.org/'>https://angularjs.org/</a>
+        </li>
+        <li>
+          <a href='http://addyosmani.com/resources/essentialjsdesignpatterns/book/'>http://addyosmani.com/resources/essentialjsdesignpatterns/book/</a>
+        </li>
+      </ul>
+    </article>
   </slide>
 
   <slide>
@@ -200,7 +284,7 @@ function helloWorld(world) {
       <h2>Slide with Image</h2>
     </hgroup>
     <article>
-      <img src="images/chart.png" class="reflect" alt="Description" title="Description">
+      <img src="images/chart.png" class="reflect" alt="">
       <footer class="source">source: place source info here</footer>
     </article>
   </slide>
@@ -210,7 +294,7 @@ function helloWorld(world) {
       <h2>Slide with Image (Centered horz/vert)</h2>
     </hgroup>
     <article class="flexbox vcenter">
-      <img src="images/barchart.png" alt="Description" title="Description">
+      <img src="images/barchart.png" alt="">
       <footer class="source">source: place source info here</footer>
     </article>
   </slide>
@@ -386,9 +470,9 @@ function helloWorld(world) {
     </p>
   </slide>
 
-  <slide class="logoslide dark nobackground">
+  <slide class="dark nobackground">
     <article class="flexbox vcenter">
-      <span><img src="images/google_developers_logo_white.png"></span>
+      <span><img src="images/google_developers_logo.png"></span>
     </article>
   </slide>
 
