More... bad commit message

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" media="all" href="theme/css/default.css">
   <link rel="stylesheet" media="all" href="theme/css/rcu.css">
+  <link rel="stylesheet" media="all" href="theme/css/font-awesome.css">
   <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="theme/css/phone.css">
   <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->
   <script data-main="js/slides" src="js/require-1.0.8.min.js"></script>
@@ -125,6 +126,46 @@
       </ul>
     </article>
   </slide>
+
+  <slide class="segue dark nobackground">
+    <aside class="gdbar"><img src="images/google_developers_icon_128.png"></aside>
+    <hgroup class="auto-fadein">
+      <h2>The design process</h2>
+      <h3>Modularization starts from the design</h3>
+    </hgroup>
+  </slide>
+
+  <slide class="fill nobackground" style="background-image: url(images/water.jpg)">
+  </slide>
+
+  <slide class="fill nobackground" style="background-image: url(images/iter.jpg)">
+  </slide>
+
+  <slide class="fill nobackground" style="background-image: url(images/water.jpg)">
+  </slide>
+
+  <slide class="fill nobackground">
+    <div class='scroll-image'>
+      <img src='images/mock.jpg' alt=''>
+    </div>
+  </slide>
+
+  <slide class="fill nobackground">
+    <div class='scroll-image'>
+      <img src='images/style-guide.jpg' alt=''>
+    </div>
+  </slide>
+
+  <slide class="fill nobackground" style="background-image: url(images/iter.jpg)">
+  </slide>
+
+  <slide class="fill nobackground">
+    <div class='scroll-image'>
+      <img src='images/fegg.jpg' alt=''>
+    </div>
+  </slide>
+
+  <!-- here -->
 
   <slide>
     <hgroup>
