Less verbose links

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
       <img src="images/web-components-logo.svg" alt="" style='width: 20em'>
       <ul class='lower-links'>
         <li>
-          <a href='http://webcomponents.org/'>http://webcomponents.org/</a>
+          <a href='http://webcomponents.org/'>webcomponents.org</a>
         </li>
         <li>
-          <a href='https://www.youtube.com/watch?v=fqULJBBEVQE'>https://www.youtube.com/watch?v=fqULJBBEVQE</a>
+          <a href='https://www.youtube.com/watch?v=fqULJBBEVQE'>youtube.com/watch?v=fqULJBBEVQE</a>
         </li>
       </ul>
     </article>
@@ -98,10 +98,10 @@
       <img src="images/bower-logo.png" alt="" style='width: auto; height: 16em'>
       <ul class='lower-links'>
         <li>
-          <a href='http://bower.io/'>http://bower.io/</a>
+          <a href='http://bower.io/'>bower.io</a>
         </li>
         <li>
-          <a href='http://www.youtube.com/watch?v=1rz334A8U7o'>https://www.youtube.com/watch?v=1rz334A8U7o</a>
+          <a href='http://www.youtube.com/watch?v=1rz334A8U7o'>youtube.com/watch?v=1rz334A8U7o</a>
         </li>
       </ul>
     </article>
@@ -115,13 +115,13 @@
       <img src="images/js.jpg" alt="" style='width: 38em'>
       <ul class='lower-links'>
         <li>
-          <a href='http://emberjs.com/'>http://emberjs.com/</a>
+          <a href='http://emberjs.com/'>emberjs.com</a>
         </li>
         <li>
-          <a href='https://angularjs.org/'>https://angularjs.org/</a>
+          <a href='https://angularjs.org/'>angularjs.org</a>
         </li>
         <li>
-          <a href='http://addyosmani.com/resources/essentialjsdesignpatterns/book/'>http://addyosmani.com/resources/essentialjsdesignpatterns/book/</a>
+          <a href='http://addyosmani.com/resources/essentialjsdesignpatterns/book/'>addyosmani.com/resources/essentialjsdesignpatterns/book</a>
         </li>
       </ul>
     </article>
@@ -783,22 +783,22 @@ nav ul {
     <article>
       <ul>
         <li>
-          <a href='https://ux.mailchimp.com/patterns'>https://ux.mailchimp.com/patterns</a>
+          <a href='https://ux.mailchimp.com/patterns'>ux.mailchimp.com/patterns</a>
         </li>
         <li>
-          <a href='https://github.com/styleguide/css'>https://github.com/styleguide/css</a>
+          <a href='https://github.com/styleguide/css'>github.com/styleguide/css</a>
         </li>
         <li>
-          <a href='http://www.bbc.co.uk/gel'>http://www.bbc.co.uk/gel</a>
+          <a href='http://www.bbc.co.uk/gel'>bbc.co.uk/gel</a>
         </li>
         <li>
-          <a href='http://sfdc-styleguide.herokuapp.com/'>http://sfdc-styleguide.herokuapp.com/</a>
+          <a href='http://sfdc-styleguide.herokuapp.com/'>sfdc-styleguide.herokuapp.com</a>
         </li>
         <li>
-          <a href='http://clearleft.com/styleguide/'>http://clearleft.com/styleguide/</a>
+          <a href='http://clearleft.com/styleguide/'>clearleft.com/styleguide</a>
         </li>
         <li>
-          <a href='https://www.mozilla.org/en-US/styleguide/'>https://www.mozilla.org/en-US/styleguide/</a>
+          <a href='https://www.mozilla.org/en-US/styleguide/'>mozilla.org/en-US/styleguide</a>
         </li>
       </ul>
     </article>
@@ -811,10 +811,10 @@ nav ul {
     <article>
       <ul>
         <li>
-          <a href='http://foundation.zurb.com/'>http://foundation.zurb.com/</a>
+          <a href='http://foundation.zurb.com/'>foundation.zurb.com</a>
         </li>
         <li>
-          <a href='http://getbootstrap.com/'>http://getbootstrap.com/</a>
+          <a href='http://getbootstrap.com/'>getbootstrap.com</a>
         </li>
       </ul>
       <br>
@@ -847,28 +847,28 @@ nav ul {
     <article>
       <ul>
         <li>
-          <a href='http://smacss.com/'>http://smacss.com/</a>
+          <a href='http://smacss.com/'>smacss.com</a>
         </li>
         <li>
-          <a href='http://bem.info/'>http://bem.info/</a>
+          <a href='http://bem.info/'>bem.info</a>
         </li>
         <li>
-          <a href='http://bradfrostweb.com/blog/post/atomic-web-design/'>http://bradfrostweb.com/blog/post/atomic-web-design/</a>
+          <a href='http://bradfrostweb.com/blog/post/atomic-web-design/'>bradfrostweb.com/blog/post/atomic-web-design</a>
         </li>
         <li>
-          <a href='https://www.gov.uk/design-principles'>https://www.gov.uk/design-principles</a>
+          <a href='https://www.gov.uk/design-principles'>gov.uk/design-principles</a>
         </li>
         <li>
-          <a href='http://livingstyleguide.org/'>http://livingstyleguide.org/</a>
+          <a href='http://livingstyleguide.org/'>livingstyleguide.org</a>
         </li>
         <li>
-          <a href='https://github.com/bjankord/Style-Guide-Boilerplate'>https://github.com/bjankord/Style-Guide-Boilerplate</a>
+          <a href='https://github.com/bjankord/Style-Guide-Boilerplate'>github.com/bjankord/Style-Guide-Boilerplate</a>
         </li>
         <li>
-          <a href='https://github.com/adactio/Pattern-Primer'>https://github.com/adactio/Pattern-Primer</a>
+          <a href='https://github.com/adactio/Pattern-Primer'>github.com/adactio/Pattern-Primer</a>
         </li>
         <li>
-          <a href='http://alistapart.com/article/creating-style-guides'>http://alistapart.com/article/creating-style-guides</a>
+          <a href='http://alistapart.com/article/creating-style-guides'>alistapart.com/article/creating-style-guides</a>
         </li>
       </ul>
     </article>
